fix mobile spacing

--- a/css/style.css
+++ b/css/style.css
@@ -656,6 +656,10 @@ select:focus {
 
   }
 
+  .header-spacer {
+    display: none;
+  }
+
   html {
     font-size: 14.5px;
     /* Slightly smaller base on small screens */
